Update og meta tags

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -27,6 +27,8 @@
     %link{rel: "shortcut icon", href: "favicon.ico"}
     %link{rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Lato:300,400,700"}
 
+    %meta{property:"og:title",       content: "Carpool" }
+    %meta{property:"og:description", content: meta_description }
     - ogp_tags do| name, value |
       - if name.include?("image")
         - if !@ogp_image_path.present?
