Add Geocode information

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -8,12 +8,12 @@
     %meta{name: "keywords", content: meta_keywords}
     %meta{name: "author", content: data.config.site.author}
 
-    -# Generated Geo-Tags: http://www.geo-tag.de/generator
     %meta{name: "DC.title", content: render_page_title}
-    -# %meta{name: "geo.region", content: "XX-XX"}
-    -# %meta{name: "geo.placename", content: "XXXXX"}
-    -# %meta{name: "geo.position", content: "XXXX;XXXX"}
-    -# %meta{name: "ICBM", content: "XXXX XXXX"}
+
+    %meta{name: "geo.region", content: "AU"}
+    %meta{name: "geo.placename", content: "Perth"}
+    %meta{name: "geo.position", content: "-31.950527;115.860457"}
+    %meta{name: "ICBM", content: "-31.950527, 115.860457"}
 
     -# Standard viewport tag to set the viewport to the device's width,
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}
