--- a/source/layouts/partials/_nav.html.haml
+++ b/source/layouts/partials/_nav.html.haml
@@ -5,5 +5,5 @@
     = link_to 'Videos', '/videos.html', class: "videos"
   %li{ nav_active('podcast.html') }
     = link_to 'Podcast', '/podcast.html', class: "podcast"
-  -# %li{ nav_active('about.html') }
-  -#   = link_to 'About', '/about.html', class: "about"
+  %li{ nav_active('about.html') }
+    = link_to 'About', '/about.html', class: "about"
