--- a/source/stylesheets/_base.typography.sass
+++ b/source/stylesheets/_base.typography.sass
@@ -22,3 +22,10 @@ h3
 p
   +fluid-scale(font-size, $responsive_min, $responsive_max, 15px, 18px)
   line-height: 1.6
+
++respond-to(ipad-up)
+  .text-columns
+    column-count: 2
+    column-gap: 40px
+    p
+      margin: 0 0 1em
