Updates to layout and template

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -25,7 +25,7 @@
     
     -# App Icons
     %link{rel: "shortcut icon", href: "favicon.ico"}
-    %link{rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Lato:300,400,700"}
+    %link{rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans"}
 
     %meta{property:"og:title",       content: render_page_title }
     %meta{property:"og:description", content: meta_description }
