--- a/source/podcast/template.html.haml
+++ b/source/podcast/template.html.haml
@@ -6,6 +6,8 @@
 - @dynamic_title = episode.title
 - @dynamic_description = episode.description
 
+- @ogp_image_path = "podcast"
+
 - @twitter_label1 = '🗓 Released'
 - @twitter_data1  = episode.date.strftime('%b %e, %Y')
 
