--- a/source/stylesheets/_components.video.card.sass
+++ b/source/stylesheets/_components.video.card.sass
@@ -57,6 +57,7 @@
     line-height: 20px
     position: absolute
     bottom: 20px
+    font-family: 'Open Sans', sans-serif
 
 .media-content__credits
   font-size: 13px
