--- a/source/stylesheets/_base.typography.sass
+++ b/source/stylesheets/_base.typography.sass
@@ -29,3 +29,11 @@ p
     column-gap: 40px
     p
       margin: 0 0 1em
+
+body.light-body
+  h1, h2, h3
+    color: #fff
+    text-shadow: 0 1px 3px rgba(0,0,0,0.7)
+  p
+    color: rgba(255,255,255,0.8)
+    text-shadow: 0 1px 3px rgba(0,0,0,0.7)
