--- a/source/stylesheets/_components.grid.sass
+++ b/source/stylesheets/_components.grid.sass
@@ -30,7 +30,8 @@
   +respond-to(medium-up)
     padding: 20px
     flex: 0 0 50%
+
 .Col--crew
-  flex: 0 0 33.3333%
-  +respond-to(small-only)
-    flex: 0 0 100%
+  flex: 0 1 33.3333%
+  +respond-to(small-down)
+    flex: 0 1 100%
