--- a/source/stylesheets/_components.header.sass
+++ b/source/stylesheets/_components.header.sass
@@ -122,7 +122,8 @@
 
 .page_podcast .carpool-header .primary-menu a.podcast,
 .watch .carpool-header .primary-menu a.videos,
-.series .carpool-header .primary-menu a.videos
+.series .carpool-header .primary-menu a.videos,
+.page_about .carpool-header .primary-menu a.about
   border-bottom: 2px solid currentColor
 
 // Watch page
