--- a/source/stylesheets/styles.css.scss.erb
+++ b/source/stylesheets/styles.css.scss.erb
@@ -17,6 +17,8 @@
 
 @import "components.breadcrumbs";
 @import "components.container";
+@import "components.crew";
+@import "components.cover";
 @import "components.feature";
 @import "components.footer";
 @import "components.grid";
