--- a/source/stylesheets/_components.breadcrumbs.sass
+++ b/source/stylesheets/_components.breadcrumbs.sass
@@ -14,7 +14,7 @@
     color: $col-link
   
 
-.series .Breadcrumbs
+.light-body .Breadcrumbs
   a
     color: rgba(255,255,255,0.8)
     text-shadow: 0 1px 3px rgba(0,0,0,0.7)
