No text shadow on video cards.

--- a/source/stylesheets/_components.video.card.sass
+++ b/source/stylesheets/_components.video.card.sass
@@ -58,7 +58,10 @@
     position: absolute
     bottom: 20px
     font-family: 'Open Sans', sans-serif
-
+  .title,
+  .video-subtitle,
+  .description
+    text-shadow: 0 0 0 transparent
 .media-content__credits
   font-size: 13px
   color: #333333
