Fix minor css issues.

--- a/source/stylesheets/_components.header.sass
+++ b/source/stylesheets/_components.header.sass
@@ -66,10 +66,11 @@
     ul
       list-style: none
       padding: 0
-      margin: 0 -10px
+      margin: 0        
       overflow: hidden
       +respond-to(small-down)
         background: rgba(0,0,0,0.6)
+        margin: 0 -10px
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -1px 0 rgba(255,255,255,0.2)
     li
       float: left
