--- a/source/watch/template.html.haml
+++ b/source/watch/template.html.haml
@@ -5,7 +5,7 @@
 
 - @dynamic_title = video.title
 - @dynamic_description = video.description
-- @ogp_image_path = "watch/#{video.slug}"
+- @ogp_image_path = "watch/#{slug}"
 
 - @twitter_label1 = '🗓 Released'
 - @twitter_data1  = video.release_date.strftime('%b %e, %Y')
