--- a/source/videos.html.haml
+++ b/source/videos.html.haml
@@ -10,5 +10,5 @@
     %h1.tc Videos
     = partial "videos/nav"
     .Row
-      - data.videos.each do | video |
-        .Col.Col--video= partial("partials/video/card", locals: { video: video })
+      - videos.each do | slug, video |
+        .Col.Col--video= partial("partials/video/card", locals: { slug: slug, video: video })\
