--- a/source/videos/category.html.haml
+++ b/source/videos/category.html.haml
@@ -4,14 +4,13 @@
   meta_keywords:
 ---
 
-- @dynamic_title = "#{category.category.humanize}s"
-- @dynamic_html_class = "videos_#{category.category}s"
+- @dynamic_title = "#{category.humanize}s"
+- @dynamic_html_class = "videos_#{category}s"
 
 .pt5
   .Container.pt3.Primary.pb4
     %h1.tc Videos
     = partial "videos/nav"
     .Row
-      - data.videos.each do | video |
-        - if video.category == category.category
-          .Col.Col--video= partial("partials/video/card", locals: { video: video })
+      - videos_in_category(category).each do | slug, video |
+        .Col.Col--video= partial("partials/video/card", locals: { slug: slug, video: video })
