Series refactoring Refactoring series feature so that we only have to specify a slug

--- a/source/partials/series/_card.haml
+++ b/source/partials/series/_card.haml
@@ -2,5 +2,5 @@
   = link_to series_link(series), class: 'thumb' do
     = image_tag("series/#{series.slug}_card.jpg", alt: series.title)
     .series-caption
-      %small.category=  "#{series.videos} episodes"
+      %small.category=  "#{videos_in_series(series.slug).count} episodes"
       %h2.title= series.title
