--- a/source/series/template.html.haml
+++ b/source/series/template.html.haml
@@ -25,7 +25,7 @@
       
   .pt3
     .SeriesInformation
-      %h3 #{series.videos} Episodes
+      %h3 #{videos_in_series(series.slug).count} Episodes
     .Row
       - videos_in_series(series.slug).each do | slug, video |
         .Col.Col--video= partial("partials/video/card", locals: { slug: slug, video: video })
