Update feature styling Update 3 boys 1 camera episode ordering

--- a/source/index/_feature.html.haml
+++ b/source/index/_feature.html.haml
@@ -1,5 +1,5 @@
 - data.feature.each do | feature |
-  .Feature.pt4
+  .Feature
     = link_to "watch/#{feature.slug}", class: 'pt4 pb4' do
       .Container.pt4
         .Feature_subtitle.pt4.pb1 #{feature.subtitle}
