--- a/source/stylesheets/_components.feature.sass
+++ b/source/stylesheets/_components.feature.sass
@@ -3,6 +3,7 @@
   z-index: 10
   overflow: hidden
   text-align: center
+  +fluid-scale(padding-top, $responsive_min, $responsive_max, 60px, $size_scale_4_max)
   &:before
     content: ''
     display: block
@@ -39,11 +40,12 @@
   +fluid-scale(font-size, $responsive_min, $responsive_max, 11px, 13px)
   text-transform: uppercase
   letter-spacing: 0.05em
+  font-weight: 500
 
 .Feature_title
   +fluid-scale(font-size, $responsive_min, $responsive_max, 25px, 48px)
   margin: 0
-  font-weight: 300
+  font-weight: 400
   line-height: 1.25
 
 .Feature_description
