--- a/source/podcast/template.html.haml
+++ b/source/podcast/template.html.haml
@@ -18,11 +18,8 @@
   .Container.pt3.pb5
     %h1.pb3.tc Driving Drunk with Carpool
     .PodcastGroup.cf
-      .PodcastMeta
-        = image_tag 'podcast.jpg', alt: 'Driving Drunk with Carpool'
-      .PodcastList
-        .PodcastItem.PodcastItem--singular.pl3.pr3.pt3.pb3
+      .PodcastItem.PodcastItem--singular
+        %iframe{frameborder: "0", height: "150px", scrolling: "no", seamless: "", src: "https://anchor.fm/carpool/embed/episodes/#{episode.embed}", width: "100%"}
+        .pl3.pr3.pt3.pb3
           .Podcast_episode Episode #{episode.number} — #{episode.date.strftime("%B %d, %Y")}
-          %h2.Podcast_title.pt1.pb1= episode.title
           %p.Podcast_description.pb2= episode.description
-          %iframe{frameborder: "0", height: "36px", scrolling: "no", seamless: "", src: "https://simplecast.fm/e/#{episode.embed}?style=light", width: "100%"}
