--- a/source/stylesheets/_components.podcast_item.sass
+++ b/source/stylesheets/_components.podcast_item.sass
@@ -1,3 +1,40 @@
+.PodcastFeed
+  display: block
+  color: inherit
+  text-decoration: none
+  border: 1px solid #eee
+  padding: 10px 20px 10px 36px
+  border-radius: 5px
+
+.PodcastFeed--apple
+  background: image-url('feeds/apple.png') 10px 50%  no-repeat
+  background-size: 16px 16px
+
+.PodcastFeed--castbox
+  background: image-url('feeds/castbox.png') 10px 50%  no-repeat
+  background-size: 16px 16px
+
+.PodcastFeed--google
+  background: image-url('feeds/google.png') 10px 50%  no-repeat
+  background-size: 16px 16px
+
+.PodcastFeed--overcast
+  background: image-url('feeds/overcast.png') 10px 50%  no-repeat
+  background-size: 16px 16px
+
+.PodcastFeed--pocketcasts
+  background: image-url('feeds/pocketcasts.png') 10px 50%  no-repeat
+  background-size: 16px 16px
+
+.PodcastFeed--spotify
+  background: image-url('feeds/spotify.png') 10px 50%  no-repeat
+  background-size: 16px 16px
+
+
+
+.PodcastFeed + .PodcastFeed
+  margin-top: 10px
+
 .PodcastItem
   color: inherit
   text-decoration: none
