Add in Rodneys Christmas video - Add opengraph details - Change feature page - Add instagram to footer

--- a/source/layouts/_footer.html.haml
+++ b/source/layouts/_footer.html.haml
@@ -15,6 +15,9 @@
         %li.facebook
           = link_to "https://facebook.com/carpoolcrew" do
             <span>facebook.com/</span>carpoolcrew
+        %li.instagram
+          = link_to "https://instagram.com/carpool.crew" do
+            <span>instagram.com/</span>carpool.crew
         %li.twitter
           = link_to "https://twitter.com/carpool_studios" do
             <span>twitter.com/</span>carpool_studios
