--- a/source/stylesheets/_components.footer.sass
+++ b/source/stylesheets/_components.footer.sass
@@ -67,7 +67,7 @@ footer
       overflow: hidden
     li
       background: image-url('social.png') 0 0 no-repeat
-      background-size: 30px 90px
+      background-size: 30px 120px
       height: 30px
       font-size: 13px
       line-height: 2.3
@@ -75,6 +75,8 @@ footer
         background-position: 0 -30px
       &.twitter
         background-position: 1px -60px
+      &.instagram
+        background-position: 0 -90px
       a
         color: rgba(255,255,255,0.6)
         text-decoration: none
